ajout méthode log out dans Security controller

--- a/templates/partials/base-candidate.html.twig
+++ b/templates/partials/base-candidate.html.twig
@@ -29,7 +29,7 @@
                       <li> <a href="/?controller=candidate&action=dossier" class="navbar--account__links">Mon dossier</a></li>
                         <li> <a href="/page=planning" class="navbar--account__links">Mon compte</a></li>
                         <li><div class="content-log-out">
-                            <a href="/?controller=security&action=logout" class="navbar--account__links">
+                            <a href="/?area=security&controller=security&action=logout" class="navbar--account__links">
                                 <i class="fa-solid fa-arrow-right-from-bracket"></i>Déconnexion
                             </a>
                         </div></li>
