--- a/templates/pages/candidate/index.html.twig
+++ b/templates/pages/candidate/index.html.twig
@@ -87,7 +87,7 @@
         {% endfor %}
         </tbody>
     </table>
-    <button type="submit" class="btn btn-primary btn-lg">Envoyer</button>
+    <button type="submit" name="form-button" class="btn btn-primary btn-lg">Envoyer</button>
     </form>
 </div>
 
