--- a/templates/partials/base-admin.html.twig
+++ b/templates/partials/base-admin.html.twig
@@ -34,7 +34,7 @@
                       <ul class="navbar-account__content">
                           <li> <a href="/page=planning" class="navbar--account__links">Mon compte</a></li>
                           <li><div class="content-log-out">
-                              <a href="/?controller=security&action=logout" class="navbar--account__links">
+                              <a href="/?area=security&controller=security&action=logout" class="navbar--account__links">
                                   <i class="fa-solid fa-arrow-right-from-bracket"></i>Déconnexion
                               </a>
                           </div></li>
