--- a/templates/pages/admin/profileRegistered.html.twig
+++ b/templates/pages/admin/profileRegistered.html.twig
@@ -73,7 +73,7 @@
                 <p>{{ registered.title_formation }}</p>
             </div>
         <div class=' btn_registered '>
-            <p class=" btn-primary Return btnProfile"><a href="/?area=admin&controller=home&action=candidates" >Retour</a></p>
+            <p class=" btn-primary Return btnProfile"><a href="/?area=admin&controller=home" >Retour</a></p>
             <p class=" btn-primary Return btnProfile"><a href="/?area=admin&controller=registered&action=validate&id={{registered.id_user}}" >Creer le candidat</a></p>
         </div>
     </div>
