--- a/templates/pages/admin/trainees.html.twig
+++ b/templates/pages/admin/trainees.html.twig
@@ -5,6 +5,10 @@
         <button type="button" class="btn btn-primary btn-lg"><a href="/?area=admin&controller=home&action=candidates">Candidats</a></button>
         <button type="button" class="active btn btn-primary btn-lg"><a href="/?area=admin&controller=home&action=trainees">Stagiaires</a></button>
 </div>
+<div class="cont_Search">
+    <label for="myInput">Recherchez</label>
+    <input type="text" id="myInput" />
+</div>
 <div class="contData">
     <table class="dataTable">
         <thead>
@@ -13,7 +17,7 @@
             <td class="headTable">Email</td>
             <td class="headTable right">Formation</td>
         </thead>
-        <tbody>
+        <tbody id="myTable">
             {% for user in trainees %}
                 <tr>
                     <td class="cel" data-info="Prénom" ><a class="anim-hover" href="index.php?area=admin&controller=profile&id={{ user.id_user }} ?>">{{ user.firstName }}</a></td>
@@ -26,5 +30,15 @@
     </table>
 </div>
 <script src="scripts/adminDash.js"></script>
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script>
+$(document).ready(function(){
+  $("#myInput").on("keyup", function() {
+    var value = $(this).val().toLowerCase();
+    $("#myTable tr").filter(function() {
+      $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
+    });
+  });
+});
+</script>
 {% endblock %}
