--- a/templates/pages/admin/training.gestion.html.twig
+++ b/templates/pages/admin/training.gestion.html.twig
@@ -29,13 +29,40 @@
                 <td class="headTable right left">Documents demandés</td>
             </thead>
             <tbody id="myTable">
-                {% for document in documents %}
+                {% for id , document in documents %}
                     <tr>
-                        <td class="cel" data-info="Nom" >{{ document }}</td>
+                        <td class="cel celtraining" data-info="Nom" ><span  >{{ document }}</span>
+                            <div>
+                                <span><img data-id="{{ id }}" class="DocName" src="images/edit.png" /></span>
+                                <span>
+                                    <form method="POST" action="/?area=admin&controller=gestion&action=training&id={{ docs.id_training }}">
+                                            <input type="hidden" name="id_typeOfDoc" value="{{ id }}"  />
+                                        <label for='btn_delete'>
+                                            <img  src="images/delete.png" />
+                                            <input type="submit" class="hiddenbtn" id="btn_delete" name="submit_delete"  />
+                                        </label>
+                                    </form>
+                                </span>
+                            </div>
+                        </td>
                     </tr>
                 {% endfor %}
             </tbody>
         </table>
+        <form method="POST" action="/?area=admin&controller=gestion&action=training">
+
+        <input   id="editDoc" type="text" name="doc"  />
+        <input id="IdeditDoc" type="hidden" name="Iddoc" />
+        
+        <label id="Lab_submit"  class="hiddenbtn" for="btn_submit"><img src="images/accept.png" /></label>
+        <button id="btn_submit" class="hiddenbtn" type="submit" name="submit_edit"></button>
+
+        <label id="Lab_submit_add"  for="btn_submit_add"><img src="images/add.png" /></label>
+        <button id="btn_submit_add" class="hiddenbtn" type="submit" name="submit_add"></button>
+        
+        <label id="Lab_cancel"   for="btn_cancel"><img src="images/cancel.png" /></label>
+        <button id="btn_cancel" class="hiddenbtn" type="button" name=""></button>
+        </form
     </div>
 </div>
 <script src="scripts/adminDash.js"></script>
