--- a/templates/pages/admin/training.gestion.html.twig
+++ b/templates/pages/admin/training.gestion.html.twig
@@ -24,32 +24,37 @@
         </div>
     </form>
     <div class="ContgestionTable">
-        <table class="dataTable gestionTable">
-            <thead>
-                <td class="headTable right left">Documents demandés</td>
-            </thead>
-            <tbody id="myTable">
-                {% for id , document in documents %}
-                    <tr>
-                        <td class="cel celtraining" data-info="Nom" ><span  >{{ document }}</span>
-                            <div>
-                                <span><img data-id="{{ id }}" class="DocName" src="images/edit.png" /></span>
-                                <span>
-                                    <form method="POST" action="/?area=admin&controller=gestion&action=training&id={{ docs.id_training }}">
-                                            <input type="hidden" name="id_typeOfDoc" value="{{ id }}"  />
-                                        <label for='btn_delete'>
-                                            <img  src="images/delete.png" />
-                                            <input type="submit" class="hiddenbtn" id="btn_delete" name="submit_delete"  />
-                                        </label>
-                                    </form>
-                                </span>
-                            </div>
-                        </td>
-                    </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-        <form method="POST" action="/?area=admin&controller=gestion&action=training">
+        {% if documents %} 
+            <table class="dataTable gestionTable">
+                <thead>
+                    <td class="headTable right left">Documents demandés</td>
+                </thead>
+                <tbody id="myTable">
+                        {% for id , document in documents %}
+                            <tr>
+                                <td class="cel celtraining" data-info="Nom" ><span  >{{ document }}</span>
+                                    <div>
+                                        <span><img data-id="{{ id }}" class="DocName" src="images/edit.png" /></span>
+                                        <span>
+                                            <form method="POST" action="/?area=admin&controller=gestion&action=training&id={{ docs.id_training }}">
+                                                    <input type="hidden" name="id_typeOfDoc" value="{{ id }}"  />
+                                                    <input type="hidden" name="delete" />
+                                                <label class='labdel' for='btn_delete{{ id }}'>
+                                                    <img  src="images/delete.png" />
+                                                    <input type="submit" class="hiddenbtn" id="btn_delete{{ id }}" name="submit_delete{{ id }}"  />
+                                                </label>
+                                            </form>
+                                        </span>
+                                    </div>
+                                </td>
+                            </tr>
+                        {% endfor %}
+                </tbody>
+            </table>
+        {% else %}
+            <p>Aucun document n'est requis pour la formation actuellement</p>
+        {% endif %}
+        <form method="POST" action="/?area=admin&controller=gestion&action=training&id={{ docs.id_training }}">
 
         <input   id="editDoc" type="text" name="doc"  />
         <input id="IdeditDoc" type="hidden" name="Iddoc" />
@@ -63,6 +68,9 @@
         <label id="Lab_cancel"   for="btn_cancel"><img src="images/cancel.png" /></label>
         <button id="btn_cancel" class="hiddenbtn" type="button" name=""></button>
         </form
+        {% if message is defined %}
+            <p>{{ message }}</p>
+        {% endif %}
     </div>
 </div>
 <script src="scripts/adminDash.js"></script>
