--- a/templates/pages/security/reset-password-form.html.twig
+++ b/templates/pages/security/reset-password-form.html.twig
@@ -9,7 +9,7 @@
         <div class="form-group">
             <label for="password">Nouveau mot de passe</label>
             <input type="password"  name="password1" class="form-control" id="password_input" placeholder="tapez votre mot de passe">
-            {% if error_password1 is empty %}
+            {% if error_password1 is defined %}
                 <span class="message-alerte">{{error_password1|raw}}</span>
                 <img src="images/error.svg" alt="icone de validation" class="icone-verif">
             {% endif %}    
@@ -18,7 +18,7 @@
         <div class="form-group">
             <label for="password">Confirmer votre nouveau de passe</label>
             <input type="password"  name="password2" class="form-control" id="password_input" placeholder="confirmez votre nouveau mot de passe">
-            {% if error_password2 %}
+            {% if error_password2 is defined%}
                 <span class="message-alerte">{{error_password21|raw}}</span>
                 <img src="images/error.svg" alt="icone de validation" class="icone-verif">
             {% endif %}   
@@ -28,7 +28,7 @@
             <input type="submit" class="btn btn-primary" value="Valider" name="submit" />
         </div>
     </form>  
-    {% if error_passwords is not empty %}
+    {% if error_passwords is defined %}
         <div class="alert alert-danger alert-form" role="alert">{{error_passwords1|raw}}</div>
     {% endif %}
 </div>
