--- a/templates/partials/base-candidate.html.twig
+++ b/templates/partials/base-candidate.html.twig
@@ -6,7 +6,6 @@
     <script src="https://kit.fontawesome.com/e661624086.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="style/style.css">
-    {# <link rel="stylesheet" href="../style/dashboard-candidate.css"> #}
     <link rel="stylesheet" href="style/candidate.css">
     <title>Admin MNS</title>
   </head>
@@ -26,8 +25,8 @@
                 <img class="nav-img-account" src="images/account-img.png" alt="my-account_img"/>
                 <div class="navbar-account--toggle">
                     <ul class="navbar-account__content">
-                      <li> <a href="/?controller=candidate&action=dossier" class="navbar--account__links">Mon dossier</a></li>
-                        <li> <a href="/page=planning" class="navbar--account__links">Mon compte</a></li>
+                      <li> <a href="/?area=candidate&controller=home" class="navbar--account__links">Mon dossier</a></li>
+                        <li> <a href="/?area=candidate&controller=account" class="navbar--account__links">Mon compte</a></li>
                         <li><div class="content-log-out">
                             <a href="/?area=security&controller=security&action=logout" class="navbar--account__links">
                                 <i class="fa-solid fa-arrow-right-from-bracket"></i>Déconnexion
@@ -45,6 +44,5 @@
     {% endblock %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src= "scripts/nav.js"></script>
-    <script src="scripts/candidate.js"></script>
   </body>
 </html>
