--- a/templates/pages/admin/gestion/training.gestion.html.twig
+++ b/templates/pages/admin/gestion/training.gestion.html.twig
@@ -6,7 +6,7 @@
             <input type="hidden" name="id" value="{{ docs.id_training }}" />
             <h2>{{ docs.title_formation }}</h2>
             <div>
-                <label for="title_formation">Titre de la formaiton</label>
+                <label for="title_formation">Titre de la formation</label>
                 <input type='text' value='{{ docs.title_formation }}' name="title_formation" id="title_formation" />
             </div>
             <div>
