--- a/templates/pages/admin/gestion/index.gestion.html.twig
+++ b/templates/pages/admin/gestion/index.gestion.html.twig
@@ -2,7 +2,7 @@
 {% block body%}
 
 <div class='contBtnMenu'>
-                <button type="button" class="active btn btn-primary btn-lg"><a href="/?area=admin&controller=gestion&action=index">Foramtions</a></button>
+                <button type="button" class="active btn btn-primary btn-lg"><a href="/?area=admin&controller=gestion&action=index">Formations</a></button>
         <button type="button" class="btn btn-primary btn-lg"><a href="/?area=admin&controller=gestion&action=organisme">Organismes</a></button>
         
 </div>
@@ -34,7 +34,7 @@
 </div>
 <div class='contBtnMenu'>
         <button type="button" class=" btn btn-primary btn-lg"><a href="/?area=admin&controller=home">Retour</a></button>
-        <button type="button" class=" btn btn-primary btn-lg"><a href="/?area=admin&controller=gestion&action=AddTraining">Ajouter</a></button>
+        <button type="button" class=" btn btn-primary btn-lg"><a href="/?area=admin&controller=gestion&action=addTraining">Ajouter</a></button>
 </div>
 <script src="scripts/adminDash.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
