--- a/templates/pages/admin/profileRegistered.html.twig
+++ b/templates/pages/admin/profileRegistered.html.twig
@@ -18,21 +18,21 @@
             <div class="cont_line">
                 <div class="cont_inf">
                     <p>Prénom :</p>
-                    <p> {{ registered.firstName }} </p>
+                    <p> {{ user.firstName }} </p>
                 </div>
                 <div class="cont_inf">
                     <p>Nom :  </p>
-                    <p>{{ registered.familyName }}</p>
+                    <p>{{ user.familyName }}</p>
                 </div>
             </div>
              <div class="cont_line">
                 <div class="cont_inf">
                     <p>Tel :  </p>
-                    <p>{{ registered.tel }}</p>
+                    <p>{{ user.tel }}</p>
                 </div>
                 <div class="cont_inf">
                     <p>Email :  </p>
-                    <p>{{ registered.email }}</p>
+                    <p>{{ user.email }}</p>
                 </div>
             </div>
             <div class="cont_address">
@@ -40,41 +40,41 @@
                <div class="cont_line2 ">
                     <div class="cont_inf2">
                         <p>Numéro :  </p> 
-                        <p>{{ registered.streetNumber }}</p> 
+                        <p>{{ user.streetNumber }}</p> 
                     </div>
                     <div class="cont_inf2">
                         <p>Type de voie : </p>
-                        <p>{{ registered.laneType }} </p>
+                        <p>{{ user.laneType }} </p>
                     </div>
                     <div class="cont_inf2">
                         <p>Nom de voie :</p>
-                        <p>{{ registered.street }} </p>
+                        <p>{{ user.street }} </p>
                     </div>
                 </div>
                 <div class="cont_line2">
-                {% if registered.addressComplement  %}
+                {% if user.addressComplement  %}
                     <div class="cont_inf2">
                         <p>Complément d'adresse : </p>
-                        <p>{{ registered.addressComplement }} </p>
+                        <p>{{ user.addressComplement }} </p>
                     </div>
                 {% endif %}
                     <div class="cont_inf2">
                         <p>Code postal : </p>
-                        <p>{{ registered.postalCode }} </p>
+                        <p>{{ user.postalCode }} </p>
                     </div>
                     <div class="cont_inf2">
                         <p>Ville :</p>
-                        <p>{{ registered.city }} </p>
+                        <p>{{ user.city }} </p>
                     </div>
                 </div>
             </div>      
             <div class="cont_titleFormation">
                 <p>Formation : </p>
-                <p>{{ registered.title_formation }}</p>
+                <p>{{ user.title_formation }}</p>
             </div>
         <div class=' btn_registered '>
-            <p class=" btn-primary Return btnProfile"><a href="/?area=admin&controller=home" >Retour</a></p>
-            <p class=" btn-primary Return btnProfile"><a href="/?area=admin&controller=registered&action=validate&id={{registered.id_user}}" >Creer le candidat</a></p>
+            <p class=" btn-primary Return btnProfile"><a href="/?area=admin&controller=home&action={{action}}" >Retour</a></p>
+            <p class=" btn-primary Return btnProfile"><a href="/?area=admin&controller=registered&action=validate&id={{user.id_user}}" >Creer le candidat</a></p>
         </div>
     </div>
 </div>
