--- a/templates/pages/admin/candidates.html.twig
+++ b/templates/pages/admin/candidates.html.twig
@@ -25,7 +25,15 @@
                     <td class="cel" data-info="Nom" ><a >{{ user.familyName }}</a></td>
                     <td class="cel" data-info="Email" ><a mailto="{{ user.email }}">{{ user.email }}</a></td>
                     <td class="cel" data-info="Formation" >{{ user.title_formation }}</td>
-                    <td class="cel center" data-info="Dossier Complété" ><a class="center">
+                    <td class="cel center" data-info="Dossier Complété" >
+                    <a class="center ">
+                    <div class="percent">
+                        <svg>
+                            <circle cx='24' cy='24' r='24' class="percent_doc1"></circle>
+                            <circle cx='24' cy='24' r='24'  data-percent='{{ user.0.percent }}' class="percent_doc2"></circle>
+                        </svg>
+                    </div>
+                    <div class="nbDoc">
                     {% for isvalid in DocValid %}
                         {% if isvalid.id_user == user.id_user %}
                             {{ isvalid.isValid }} 
@@ -33,9 +41,11 @@
                     {% endfor %} 
                     {% for Doc in trainingDoc %}    
                         {% if user.title_formation == Doc.title_formation %}
-                                / {{ Doc.nbDocs }}</a></td>
+                                / {{ Doc.nbDocs }}
                         {% endif %}
                     {% endfor %}
+                    </div>
+                    </a></td>
                 </tr>
             {% endfor %}
         </tbody>
