--- a/templates/pages/candidate/index.html.twig
+++ b/templates/pages/candidate/index.html.twig
@@ -27,6 +27,8 @@
             {% if userDocuments[document.id_typeOfDoc] is defined %}
                 {% if userDocuments[document.id_typeOfDoc] == true %}
                 <i class="fa-solid fa-check"></i>
+                {% elseif userDocuments[document.id_typeOfDoc] is null %}
+                <p>En cours d'analyse</p>
                 {% elseif userDocuments[document.id_typeOfDoc] == false %}
                 <label for='{{document.wording_typeOfDoc}}'>
                     <i class="fa-solid fa-cloud-arrow-up"></i>
@@ -50,11 +52,14 @@
             {% if userDocuments[document.id_typeOfDoc] is defined %}
                 {% if userDocuments[document.id_typeOfDoc] == true %}
                 <i class="fa-solid fa-check"></i>
+                {% elseif userDocuments[document.id_typeOfDoc] is null %}
+                <p>En cours d'analyse</p>
                 {% elseif userDocuments[document.id_typeOfDoc] == false %}
                 <label for='{{document.wording_typeOfDoc}}'>
                     <i class="fa-solid fa-cloud-arrow-up"></i>
                 </label>
                 <input id='{{document.wording_typeOfDoc}}' type='file' name="typeOfDocs[{{document.id_typeOfDoc}}]" accept=".pdf"/>
+                <input type='hidden' value={{document.id_typeOfDoc}}/>
                 {% endif %}
             {% else %}
             <label for='{{document.wording_typeOfDoc}}'>
@@ -67,16 +72,19 @@
         {% endif %}
         {% if key == nbIndex -1 %}
         <tr>
-            <td scope='col' id='td_id-card' class='col-1 down-left'>type{{document.wording_typeOfDoc}}</td>
+            <td scope='col' id='td_id-card' class='col-1 down-left'>{{document.wording_typeOfDoc}}</td>
             <td scope='col' class='down-right col-2'>
-                {% if userDocuments[document.id_typeOfDoc] is defined %}
+            {% if userDocuments[document.id_typeOfDoc] is defined %}
                 {% if userDocuments[document.id_typeOfDoc] == true %}
                 <i class="fa-solid fa-check"></i>
+                {% elseif userDocuments[document.id_typeOfDoc] is null %}
+                <p>En cours d'analyse</p>
                 {% elseif userDocuments[document.id_typeOfDoc] == false %}
                 <label for='{{document.wording_typeOfDoc}}'>
                     <i class="fa-solid fa-cloud-arrow-up"></i>
                 </label>
                 <input id='{{document.wording_typeOfDoc}}' type='file' name="typeOfDocs[{{document.id_typeOfDoc}}]" accept=".pdf"/>
+                <input type='hidden' value={{document.id_typeOfDoc}}/>
                 {% endif %}
             {% else %}
             <label for='{{document.wording_typeOfDoc}}'>
