--- a/templates/partials/base.html.twig
+++ b/templates/partials/base.html.twig
@@ -9,7 +9,7 @@
     <title>Admin MNS</title>
   </head>
   <body>
-  <header></header>
+  <header><h1>Admin MNS</h1></header>
 
   {% block body %}
   
