--- a/templates/pages/security/index.html.twig
+++ b/templates/pages/security/index.html.twig
@@ -2,41 +2,46 @@
 
 {% block body%}
 
-<div class="container container-login">
-    <div class="login-form-container">
-        <div class="login-form-top">
-            <h2>Identifiez-vous</h2>
-        </div>
-        <form method='post' action='/?area=security&controller=security&action=check'>
-            <div class="form-group">
-                <label for="email">Adresse email</label>
-                <input type="email" name="email" class="form-control" id="email_input" placeholder="name@example.com">
-                <div class='check-form'>
-                    <img src="images/check.svg" alt="icone de validation" class="icone-verif login-js">
-                    <span class="message-alerte login-js">Rentrez un email valide.</span>
-                </div>
-                {% if email_error is defined %} {% include "partials/inc_email-error.php" %}
-                {% endif %}
-            </div>
-            <div class="form-group">
-                <label for="password">Mot de passe</label>
-                <input type="password"  name="password" class="form-control" id="password_input" placeholder="tapez votre mot de passe">
-                <div class="password_forgotten"><a href="/?area=security&controller=security&action=forgotPassword">mot de passe oublié ?</a></div>
-                {% if password_error is defined %} {% include "partials/inc_password-error.php" %}
-                {% endif %}
-                {% if error_account is defined %} {% include "partials/inc_account-error.php" %}
-                {% endif %}
-            </div>    
-                <div class="container-button-center">
-                    <input type="submit" class="btn btn-secondary" value="Connexion" name="submit" />
-                </div>
-        </form> 
-        <div class='register-part'>
-            <p>Vous souhaitez devenir candidat ?</p>
-            <a href="/?area=home&controller=home&action=register"><input type="submit" class="btn btn-primary" value="Je candidate" name="submit" /></a>
-        </div>
-</div>
-</div>
-<script src="scripts/login-check.js"></script>
+	<div class="container container-login">
+		<div {% if error_account is defined %} style="height : 475px" class="login-form-container" {% else %} class="login-form-container" {% endif %}>
+			<div class="login-form-top">
+				<h2>Identifiez-vous</h2>
+			</div>
+			<form method='post' action='/?area=security&controller=security&action=check'>
+				<div class="form-group">
+					<label for="email">Adresse email</label>
+					<input type="email" name="email" class="form-control" id="email_input" placeholder="name@example.com">
+					<div class='check-form'>
+						<img src="images/check.svg" alt="icone de validation" class="icone-verif login-js">
+						<span class="message-alerte login-js">Rentrez un email valide.</span>
+					</div>
+					{% if email_error is defined %}
+						{% include "partials/inc_email-error.php" %}
+					{% endif %}
+				</div>
+				<div class="form-group">
+					<label for="password">Mot de passe</label>
+					<input type="password" name="password" class="form-control" id="password_input" placeholder="tapez votre mot de passe">
+					{% if password_error is defined %}
+						{% include "partials/inc_password-error.php" %}
+					{% endif %}
+					<div class="password_forgotten">
+						<a href="/?area=security&controller=security&action=forgotPassword">mot de passe oublié ?</a>
+					</div>
+					{% if error_account is defined %}
+						{% include "partials/inc_account-error.php" %}
+					{% endif %}
+				</div>
+				<div class="container-button-center">
+					<input type="submit" class="btn btn-secondary" value="Connexion" name="submit"/>
+				</div>
+			</form>
+			<div class='register-part'>
+				<p>Vous souhaitez devenir candidat ?</p>
+				<a href="/?area=home&controller=home&action=register"><input type="submit" class="btn btn-primary" value="Je candidate" name="submit"/></a>
+			</div>
+		</div>
+	</div>
+	<script src="scripts/login-check.js"></script>
 
 {% endblock %}
